--- a/WeatherPy/WeatherPy.ipynb
+++ b/WeatherPy/WeatherPy.ipynb
@@ -13,35 +13,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Collecting citipy\n",
-      "  Downloading citipy-0.0.5.tar.gz (557 kB)\n",
-      "Collecting kdtree>=0.12\n",
-      "  Downloading kdtree-0.16-py2.py3-none-any.whl (7.7 kB)\n",
-      "Building wheels for collected packages: citipy\n",
-      "  Building wheel for citipy (setup.py): started\n",
-      "  Building wheel for citipy (setup.py): finished with status 'done'\n",
-      "  Created wheel for citipy: filename=citipy-0.0.5-py3-none-any.whl size=559707 sha256=685d5d921481776a42c31801ecd3d4304b0c4aaaed180ef0147385c158395bd1\n",
-      "  Stored in directory: c:\\users\\hope\\appdata\\local\\pip\\cache\\wheels\\eb\\07\\14\\1c448d9fabf3aceac66270933ecae15693974a1b7f91266841\n",
-      "Successfully built citipy\n",
-      "Installing collected packages: kdtree, citipy\n",
-      "Successfully installed citipy-0.0.5 kdtree-0.16\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#!pip install citipy"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {
     "scrolled": true
    },
@@ -78,16 +59,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "602"
+       "609"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -125,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {
     "scrolled": true
    },
@@ -136,25 +117,27 @@
      "text": [
       "Begining Data Retrieval\n",
       "-------------------------------\n",
-      "Processing Record (???) of Set (???) | London\n",
-      "Processing Record (???) of Set (???) | Bujumbura\n"
+      "Processing Record 0 Set (???) | London\n",
+      "Processing Record 1 Set (???) | Bujumbura\n"
      ]
     }
    ],
    "source": [
-    "#from https://openweathermap.org/ documentation calling one city at a time: \n",
-    "### api.openweathermap.org/data/2.5/weather?id={city id}&appid={API key}\n",
-    "tests = ['London', 'Bujumbura'] \n",
+    "# Format for calling one city at a time from openweathermap.org documentation: \n",
+    "### \"http://api.openweathermap.org/data/2.5/weather?appid=(weather_api_key)&q=(city)\n",
+    "\n",
+    "# Test my code with two cities to keep from over calling and getting locked out of API \n",
+    "test_cities = ['London', 'Bujumbura'] \n",
     "\n",
     "print(\"Begining Data Retrieval\")\n",
     "print(\"-------------------------------\")\n",
     "\n",
     "# loop request for city information from openweathermap.org\n",
-    "for test in tests:\n",
+    "for ind, test_city in enumerate(test_cities):\n",
     "    # build url following documentation from api.openweathermap.org\n",
     "    base_url = \"http://api.openweathermap.org/data/2.5/weather?\"\n",
-    "    url = base_url + \"appid=\" + weather_api_key + \"&q=\" + city\n",
-    "    print(f\"Processing Record (???) of Set (???) | {test}\")\n",
+    "    url = base_url + \"appid=\" + weather_api_key + \"&q=\" + test_city\n",
+    "    print(f\"Processing Record {ind} Set (???) | {test_city}\")\n",
     "\n",
     "    try: \n",
     "        # Get weather data\n",
@@ -171,12 +154,45 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'json' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-6-8afbd974fdc4>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mjson\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdumps\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mweather_json\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mindent\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m4\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0msort_keys\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mTrue\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m: name 'json' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "#print(json.dumps(weather_json, indent=4, sort_keys=True))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "### Convert Raw Data to DataFrame\n",
     "* Export the city data into a .csv.\n",
     "* Display the DataFrame"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lat = []\n",
+    "temp = []\n",
+    "\n",
+    "\n"
    ]
   },
   {
